# CausalPlayground

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: doc  doc.yml  publish.yml  python-app.yml
CausalPlayground/: __init__.py  generators.py  scm.py  scm_environment.py
docs/: CNAME  CausalPlayground.html  index.html  search.js
docs/CausalPlayground/: generators.html  scm.html  scm_environment.html
examples/: algorithm_comparison.ipynb  algorithm_comparison.py  custom_environment.py  gen_data.py
testing/: functions.py  test_envs.py  test_graph_gen.py  test_scm_gen.py
tests/: test_envs.py  test_graph_gen.py  test_scm_gen.py
